[metadata]
name = mdserver
version = 0.0.1
license = MIT
description = Python-based web server for simple Markdown-based websites
long_description = file: README.rst
author = Nelson Love
author_email = nelson@nelson.love
classifiers=
   Development Status :: 2 - Pre-Alpha
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License
   Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
   Topic :: Text Processing :: Markup :: HTML
   Topic :: Text Processing :: Markup :: Markdown

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   Markdown
   PyYAML

[options.packages.find]
where=src